--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -18,11 +18,13 @@
     "@middy/core": "^3.6.2",
     "@middy/http-cors": "^3.6.2",
     "@middy/http-error-handler": "^3.6.2",
+    "aws-sdk": "^2.1692.0",
+    "aws-xray-sdk": "^3.12.0",
     "aws-xray-sdk-core": "^3.4.0",
     "axios": "^1.1.3",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
