feat: done with lambda functions implementation.

--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -71,6 +71,9 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+          request:
+            schema:
+              application/json: ${file(src/requests/create-todo-request.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -92,6 +95,9 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
+          request:
+            schema:
+              application/json: ${file(src/requests/update-todo-request.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
