--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-ovrblq3dy56j1p1s.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=8x6oiDfGTMqwu1AIC6FOJeyRqSUw6a4Z
+REACT_APP_API_ENDPOINT=https://zl4etkharc.execute-api.us-east-1.amazonaws.com/dev
